// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "contained" & color: "default" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--pv-color-gray-8);
  color: var(--pv-color-black);
  box-shadow: var(--pv-shadow-light-low);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-6);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
  box-shadow: var(--pv-shadow-light-medium);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "contained" & color: "primary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--pv-color-primary);
  color: var(--pv-color-primary-contrast);
  box-shadow: var(--pv-shadow-light-low);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-primary-tint-1);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-primary-tint-2);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-primary-tint-2);
  box-shadow: var(--pv-shadow-light-medium);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "contained" & color: "secondary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--pv-color-secondary);
  color: var(--pv-color-secondary-contrast);
  box-shadow: var(--pv-shadow-light-low);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-secondary-tint-1);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-secondary-tint-2);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-secondary-tint-2);
  box-shadow: var(--pv-shadow-light-medium);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "contained" & color: "white" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--pv-color-white);
  color: var(--pv-color-black);
  box-shadow: var(--pv-shadow-light-low);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-6);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
  box-shadow: var(--pv-shadow-light-medium);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "contained" & color: "wrong" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: var(--pv-color-wrong);
  color: var(--pv-color-wrong-contrast);
  box-shadow: var(--pv-shadow-light-low);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-wrong-tint-1);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-wrong-tint-2);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-wrong-tint-2);
  box-shadow: var(--pv-shadow-light-medium);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "outlined" & color: "default" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: var(--pv-color-gray-8);
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  border-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "outlined" & color: "primary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: var(--pv-color-primary-tint-2);
  color: var(--pv-color-primary);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  border-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-primary-tint-5);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-primary-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-primary-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "outlined" & color: "secondary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: var(--pv-color-secondary-tint-2);
  color: var(--pv-color-secondary);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  border-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-secondary-tint-5);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-secondary-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-secondary-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "outlined" & color: "white" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: var(--pv-color-white);
  color: var(--pv-color-white);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  border-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-9);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "outlined" & color: "wrong" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: var(--pv-color-wrong-tint-2);
  color: var(--pv-color-wrong);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-8);
  border-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-wrong-tint-5);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-wrong-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-wrong-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "text" & color: "default" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "text" & color: "primary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-primary);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-primary-tint-5);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-primary-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-primary-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "text" & color: "secondary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-secondary);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-secondary-tint-5);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-secondary-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-secondary-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "text" & color: "white" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-white);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-9);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render (variants & colors) variant: "text" & color: "wrong" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-wrong);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-wrong-tint-5);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-wrong-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-wrong-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render as an anchor should rendered as an anchor 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<a
    class="emotion-0"
    href="https://test.com"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Link
    </span>
  </a>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render sizes size "large" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render sizes size "medium" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render sizes size "small" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn2-weight);
  font-size: var(--pv-text-btn2-size);
  line-height: var(--pv-text-btn2-height);
  letter-spacing: var(--pv-text-btn2-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render variants should be disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    disabled=""
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render variants should have class name 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="test-cls emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render variants should have test id 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    data-testid="test-id"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render variants should have text variant 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-h1-weight);
  font-size: var(--pv-text-h1-size);
  line-height: var(--pv-text-h1-height);
  letter-spacing: var(--pv-text-h1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <h1
      class="emotion-1"
    >
      Text
    </h1>
  </button>
</DocumentFragment>
`;

exports[`<ButtonBase /> ButtonBase render variants should have title 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    title="Test title"
    type="button"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </button>
</DocumentFragment>
`;
